# ARC

./: .gitignore  DOCUMENTATION.md  MANIFEST.in  README.md  requirement.txt  requirements.txt  setup.cfg  setup.py  test_SF_field.py
arc/: BSM_soil.py  NN_predict_jax.py  __init__.py  approximate_KNN_search.py  arc_sample_generator.py  arc_util.py  arch_sample_generator.py  assimilate_jax.py  credentials.py  field_processor.py  robust_smoothing.py  s2_aws_reader.py  s2_cdse_reader.py  s2_data_reader.py  s2_planetary_reader.py
arc/data/: BSM_paras.npz  China_000.npz  US_001.npz  US_005.npz  US_024.npz  US_043.npz  US_Potatoes_model_para.npz  foward_prosail_model_weights.npz  foward_prosail_s2a.h5  foward_prosail_s2b.h5
arc/test_data/: SF_field.geojson  anny_cuypers_achter_stal_geometry.geojson  johan wens vossekot_geometry.geojson  maria_van_geldorp_achter_aardbei_geometry.geojson
notebooks/: setup_credentials.ipynb  test_arc.ipynb  test_cdse.ipynb  test_gee.ipynb
