[metadata]
name = ARC
version = 0.0.1
author = Feng Yin
author_email = ucfafyi@ucl.ac.uk
description = ARC python package for crop archetypes
long_description = ''
url = https://github.com/MarcYin/ARC/tree/main
keywords = ARC, crop, archetypes, biophysical, crop modelling
license = GNU Affero General Public License v3.0

[options]
packages = find:
include_package_data = True
install_requires =
    ee
    jax
    numpy
    scipy
    tqdm
    mgrs
    gdal
    numba
    shapely
    requests
    pynndescent

[options.package_data]
* = *.md, data/*